Dark mode Login

--- a/07-Formularios/html/exercise7.html
+++ b/07-Formularios/html/exercise7.html
@@ -20,7 +20,7 @@
         <button class="twitter-btn">
           <picture>
             <img src="https://cdn-icons-png.flaticon.com/512/107/107195.png" alt="logo-google">
-          </picture>
+            </picture>
         </button>
       </div>
       <div class="separator">
@@ -49,8 +49,8 @@
         </label>
         <label for="checkbox" class="checkbox-label">
           <input type="checkbox" />
-          <span>Creating an account means you’re okay with our<span class="terms">Terms of Service,
-            Privacy Policy</span>, and our default <span class="terms">Notification Settings.</span></span>
+          <span>Creating an account means you’re okay with our <span class="terms">Terms of Service,
+            Privacy Policy,</span> and our default <span class="terms">Notification Settings.</span></span>
         </label>
         <button type="submit" class="submit-btn">Create Account</button>
     </form>
